src/core-crm/objects/hed__Course_Enrollment__c/fields/Attempt_No__c.field-meta.xml
<CustomField>
    <fullName>Attempt_No__c</fullName>
    <description>The number of times the student has been enrolled into the course</description>
    <label>Attempt No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>