src/core-crm/objects/hed__Course_Enrollment__c/fields/Attendance_Mode__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Mode__c</fullName>
    <description>The mode of attendance for the student (e.g., online, internal)</description>
    <label>Attendance Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>