src/core-crm/objects/hed__Course_Enrollment__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>hed__Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>