src/core-crm/objects/hed__Course_Enrollment__c/fields/Cart_ID__c.field-meta.xml
<CustomField>
    <fullName>Cart_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart ID</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>