src/core-crm/objects/hed__Course_Enrollment__c/fields/Cart_Item__c.field-meta.xml
<CustomField>
    <fullName>Cart_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Item</label>
    <referenceTo>CartItem</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>