src/core-crm/objects/hed__Course_Enrollment__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <description>Course/Program Plan Certificate</description>
    <formula>IF(ISBLANK(  hed__Course_Offering__r.hed__Course__c ),TEXT(Program_Offering__r.hed_Program_Plan__r.Certificate_Type__c),TEXT(hed__Course_Offering__r.hed__Course__r.Certificate_Type__c))</formula>
    <label>Certificate Type</label>
    <type>Text</type>
</CustomField>