src/core-crm/objects/hed__Course_Enrollment__c/fields/Class_Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Registration_Start_Date__c</fullName>
    <description>If a student is required to registered for classes for the given unit of study this will indicate the registration start date.</description>
    <label>Class Registration Start Date</label>
    <type>Date</type>
</CustomField>