src/core-crm/objects/hed__Course_Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The course that the student is enrolment is related to</description>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>