src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>Show Course Code where hed__Course_Offering__c is not null else fetch it using Course__c(lookup hed__course__c)</description>
    <formula>IF(
 ISBLANK(hed__Course_Offering__r.Course_Code__c),
 Course__r.Course_Code__c,
 hed__Course_Offering__r.Course_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Code</label>
    <type>Text</type>
</CustomField>