src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Course/Program Plan Name</description>
    <formula>IF(ISBLANK( hed__Course_Offering__r.hed__Course__r.Name ),Program_Offering__r.hed_Program_Plan__r.Name, hed__Course_Offering__r.hed__Course__r.Name)</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>