src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Offering_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_End_Date__c</fullName>
    <formula>hed__Course_Offering__r.hed__End_Date__c</formula>
    <label>Course Offering End Date</label>
    <type>Date</type>
</CustomField>