src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Offering_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_Name__c</fullName>
    <formula>hed__Course_Offering__r.hed__Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Offering Name</label>
    <type>Text</type>
</CustomField>