src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Offering_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_Start_Date__c</fullName>
    <formula>hed__Course_Offering__r.hed__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Offering Start Date</label>
    <type>Date</type>
</CustomField>