src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Offering_Term_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering_Term_Name__c</fullName>
    <description>The Name for referenced hed__Term__c from Course Offering</description>
    <formula>hed__Course_Offering__r.hed__Term__r.Name</formula>
    <label>Course Offering Term Name</label>
    <type>Text</type>
</CustomField>