src/core-crm/objects/hed__Course_Enrollment__c/fields/Course_Primary_Delivery_Platform__c.field-meta.xml
<CustomField>
    <fullName>Course_Primary_Delivery_Platform__c</fullName>
    <formula>hed__Course_Offering__r.Primary_Delivery_Platform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Primary Delivery Platform</label>
    <type>Text</type>
</CustomField>