src/core-crm/objects/hed__Course_Enrollment__c/fields/Enrollment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Stage__c</fullName>
    <description>The stage of enrollment as per SAMS Enrollment stage (SSP_STG_CD)</description>
    <label>Enrollment Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>