src/core-crm/objects/hed__Course_Enrollment__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>The status of the unit enrolment as per SAMS status (SSP_STTS_CD)</description>
    <label>Enrollment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>