src/core-crm/objects/hed__Course_Enrollment__c/fields/Enrollment_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status_Date__c</fullName>
    <description>The date the status was changed to current status on the record</description>
    <label>Enrollment Status Date</label>
    <type>Date</type>
</CustomField>