src/core-crm/objects/hed__Course_Enrollment__c/fields/Facilitator_Bio__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Bio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator Bio</label>
    <referenceTo>Facilitator_Bio__c</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>