src/core-crm/objects/hed__Course_Enrollment__c/fields/hed__Affiliation__c.field-meta.xml
<CustomField>
    <fullName>hed__Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Contact is affiliated with an Academic Program through an existing Program Enrollment record, and that Program Enrollment is related to this Course Connection, this Affiliation field is auto-populated with the Program Enrollment&apos;s Affiliation. If both conditions aren&apos;t true, then this Affiliation field is left blank.</description>
    <inlineHelpText>The Academic Program associated with this Course Connection. Represents a Contact-Account Affiliation.</inlineHelpText>
    <label>Affiliation</label>
    <referenceTo>hed__Affiliation__c</referenceTo>
    <relationshipLabel>Course Connection</relationshipLabel>
    <relationshipName>Course_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>