src/core-crm/objects/hed__Course_Enrollment__c/fields/hed__Display_Grade__c.field-meta.xml
<CustomField>
    <fullName>hed__Display_Grade__c</fullName>
    <description>The letter grade achieved for the Course Connection.</description>
    <inlineHelpText>The letter grade achieved for the Course Connection.</inlineHelpText>
    <label>Display Grade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>