src/core-crm/objects/hed__Course_Enrollment__c/fields/hed__Grade__c.field-meta.xml
<CustomField>
    <fullName>hed__Grade__c</fullName>
    <description>The numeric grade the student earned in this Course Offering.</description>
    <inlineHelpText>The numeric grade the student earned in this Course Offering.</inlineHelpText>
    <label>Grade</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>