src/core-crm/objects/hed__Course_Enrollment__c/fields/hed__Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>hed__Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For students, their primary Program Enrollment. In Higher Ed, this typically represents a student&apos;s academic major.</description>
    <inlineHelpText>For students, their primary Program Enrollment. In Higher Ed, this typically represents a student&apos;s academic major.</inlineHelpText>
    <label>Program Enrollment ID</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>