src/core-crm/objects/hed__Course_Enrollment__c/fields/hed__Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Status__c</fullName>
    <description>Indicates whether this is a current or former Course Connection.</description>
    <inlineHelpText>Indicates whether this is a current or former Course Connection.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>