src/core-crm/objects/hed__Course_Enrollment__c/fields/Is_Group_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be used in product catalogue to determine whether the learner is registered through group registration</description>
    <label>Is Group Registered</label>
    <type>Checkbox</type>
</CustomField>