src/core-crm/objects/hed__Course_Enrollment__c/fields/LMS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>LMS_Integration_Status__c</fullName>
    <label>LMS Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not-Ready</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>