src/core-crm/objects/hed__Course_Enrollment__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <label>Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>