src/core-crm/objects/hed__Course_Enrollment__c/fields/Marks_Description__c.field-meta.xml
<CustomField>
    <fullName>Marks_Description__c</fullName>
    <formula>IF( (Marks__c * 100) &gt;=50 &amp;&amp; (Marks__c * 100) &lt;= 64 , &apos;Pass&apos;, IF( (Marks__c * 100) &gt;=65 &amp;&amp; (Marks__c * 100) &lt;= 74 , &apos;Credit&apos;, IF( (Marks__c * 100) &gt;=75 &amp;&amp; (Marks__c * 100) &lt;= 84 , &apos;Distinction&apos;, IF( (Marks__c * 100) &gt;=85 &amp;&amp; (Marks__c * 100) &lt;= 100 , &apos; High Distinction&apos;, &apos;&apos;)) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marks Description</label>
    <type>Text</type>
</CustomField>