src/core-crm/objects/hed__Course_Enrollment__c/fields/Nominated_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Student_ID__c</fullName>
    <description>Contact’s nominated ID</description>
    <formula>hed__Contact__r.Nominated_Student_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nominated Student ID</label>
    <type>Text</type>
</CustomField>