src/core-crm/objects/hed__Course_Enrollment__c/fields/Offering_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Offering_End_Date__c</fullName>
    <formula>IF(ISBLANK( hed__Course_Offering__r.hed__End_Date__c), Program_Offering__r.End_Date__c ,hed__Course_Offering__r.hed__End_Date__c)</formula>
    <label>Offering End Date</label>
    <type>Date</type>
</CustomField>