src/core-crm/objects/hed__Course_Enrollment__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <description>Amount Paid by the learner including discounts.</description>
    <formula>IF( OR(ISPICKVAL( Paid_in_Full__c, &apos;Contract&apos;),ISPICKVAL( Paid_in_Full__c, &apos;Yes&apos;)),Cart_Item__r.TotalPrice - Cart_Item__r.Promotion_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>