src/core-crm/objects/hed__Course_Enrollment__c/fields/Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_Full__c</fullName>
    <label>Paid in Full</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>