src/core-crm/objects/hed__Course_Enrollment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Mode of payment the learner chose when registering.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Now</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Admin Added</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>Contract</fullName> 
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>