src/core-crm/objects/hed__Course_Enrollment__c/fields/Pricing_Validation__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Validation__c</fullName>
    <description>Validation status of learners basing from the pricebook selected when registered</description>
    <label>Pricing Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>