src/core-crm/objects/hed__Course_Enrollment__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Offering</label>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipLabel>Course Connections</relationshipLabel>
    <relationshipName>Course_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>