src/core-crm/objects/hed__Course_Enrollment__c/fields/Purchased_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Price__c</fullName>
    <label>Purchased Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>