src/core-crm/objects/hed__Course_Enrollment__c/fields/QUT_Identity_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Identity_ID__c</fullName>
    <formula>hed__Contact__r.QUT_Identity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUT Identity ID</label>
    <type>Text</type>
</CustomField>