src/core-crm/objects/hed__Course_Enrollment__c/fields/Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>Recordtype_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordtype Name</label>
    <type>Text</type>
</CustomField>