src/core-crm/objects/hed__Course_Enrollment__c/fields/Requires_Class_Registration__c.field-meta.xml
<CustomField>
    <fullName>Requires_Class_Registration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>There are units that do not offer choice of sessions for class registration and student are automatically registered for their class. This flag indicates if class registration action is required by student.</description>
    <label>Requires Class Registration</label>
    <type>Checkbox</type>
</CustomField>