src/core-crm/objects/hed__Course_Enrollment__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>text(hed__Contact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>