src/core-crm/objects/hed__Course_Enrollment__c/fields/Student_Has_Registered_For_Class__c.field-meta.xml
<CustomField>
    <fullName>Student_Has_Registered_For_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This attribute indicates that student has registered for classes for all activity types required for the unit of study.</description>
    <label>Student Has Registered For Class</label>
    <type>Checkbox</type>
</CustomField>