src/core-crm/objects/hed__Course_Enrollment__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Transaction ID returned from QUT Pay.</description>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>