src/core-crm/objects/hed__Course_Enrollment__c/recordTypes/Faculty.recordType-meta.xml
<RecordType>
    <fullName>Faculty</fullName>
    <active>true</active>
    <description>A Faculty Course Connection</description>
    <label>Faculty</label>
</RecordType>