src/core-crm/objects/hed__Course_Enrollment__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>A Student Course Connection</description>
    <label>Student</label>
</RecordType>