src/core-crm/objects/hed__Course_Enrollment__c/recordTypes/Student_Program.recordType-meta.xml
<RecordType>
    <fullName>Student_Program</fullName>
    <active>true</active>
    <description>Learners enroled in a Prescribed Program</description>
    <label>Student - Program</label>
</RecordType>